--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -128,7 +128,7 @@
             </article>
         </section>
     </div>
-    <footer>
+    <footer id="special">
         <p>Best School</p>
     </footer>
 </body>
